--- a/StormWeb/Views/Appointment/Index.cshtml
+++ b/StormWeb/Views/Appointment/Index.cshtml
@@ -110,7 +110,7 @@
                                                                                 &nbsp;Comments
                                                                             </th>
                                                                             <th>
-                                                                                &nbsp;Action
+                                                                                &nbsp;<i class="color-icons hammer_screwdriver_co"></i>Actions
                                                                             </th>
                                                                         </tr>
                                                                     </thead>
@@ -182,7 +182,7 @@
                                                                     &nbsp;Comments
                                                                 </th>
                                                                 <th>
-                                                                    &nbsp;Action
+                                                                    &nbsp;<i class="color-icons hammer_screwdriver_co"></i>Actions
                                                                 </th>
                                                             </tr>
                                                         </thead>
@@ -271,7 +271,7 @@
                                                                 &nbsp;Comments
                                                             </th>
                                                             <th>
-                                                                &nbsp;Action
+                                                                &nbsp;<i class="color-icons hammer_screwdriver_co"></i>Actions
                                                             </th>
                                                         </tr>
                                                     </thead>
@@ -344,7 +344,7 @@
                                                             &nbsp;Comments
                                                         </th>
                                                         <th>
-                                                            &nbsp;Action
+                                                            &nbsp;<i class="color-icons hammer_screwdriver_co"></i>Actions
                                                         </th>
                                                     </tr>
                                                 </thead>
@@ -678,7 +678,7 @@
 
     <div class="alert fade in span4" style="margin-left:30%;margin-right:30%">
 								<button data-dismiss="alert" class="close" type="button">×</button>
-								To cancel an appointment,please <b>ring</b> your counsellor.
+								To cancel an appointment,please <b>phone</b> your counsellor.
 							</div>
   }
     </p>
