--- a/StormWeb/Views/Client/Index.cshtml
+++ b/StormWeb/Views/Client/Index.cshtml
@@ -28,24 +28,25 @@ $(function () {
 </script>
 
 <div class="row-fluid">
-    <div class="span12">
-        <div class="nonboxy-widget">
+     <div class="span12">        
+        <div class="widget-block">
           <div class="widget-head">
             <h5><i class="black-icons  documents"></i>Client List</h5>
           </div>
         <div class="widget-content">
-            <div class="widget-box">
-                <table class="my-data-tbl-boxy table">
+             <div class="widget-box" style="padding: 15px;">
+                    <br />
+                      <table class="data-tbl-simple table table-bordered dataTable">
                     <thead>
                         <tr>
                             <th>
-                                Client
+                               <i class="color-icons user_co"></i> Client
                             </th>
                             <th>
-                                Contact
+                                <i class="color-icons book_addresses_co"></i> Contact
                             </th>
                             <th>
-                                Address
+                                <i class="color-icons house_co"></i> Address
                             </th>
                             <th>
                                 Service
@@ -53,7 +54,7 @@ $(function () {
                             <th>
                                 Nationality
                             </th>                            
-                            <th>
+                            <th><i class="color-icons hammer_screwdriver_co"></i>Actions
                             </th>
                         </tr>
                     </thead>
