--- a/StormWeb/Views/Course/Create.cshtml
+++ b/StormWeb/Views/Course/Create.cshtml
@@ -124,11 +124,9 @@
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Create"  class="btn btn-primary"/>
+    @Html.Button_DeleteOrCancel("Cancel", "List")
         </p>
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "List")
-</div>
+ 
