--- a/StormWeb/Views/Course/Index.cshtml
+++ b/StormWeb/Views/Course/Index.cshtml
@@ -97,7 +97,7 @@ $(function () {
                                     Description
                                 </th>
                                 <th>
-                                    Action
+                                   <i class="color-icons hammer_screwdriver_co"></i>Actions
                                 </th>
                             </tr>
                         </thead>
