--- a/StormWeb/Views/Document/ShowGeneralTemplates.cshtml
+++ b/StormWeb/Views/Document/ShowGeneralTemplates.cshtml
@@ -74,7 +74,7 @@
                                         Required
                                     </th>
                                     <th>
-                                        Action
+                                         <i class="color-icons hammer_screwdriver_co"></i>Actions
                                     </th>
                                 </tr>
                                 @foreach (var item in Model)
