--- a/StormWeb/Views/Event/Details.cshtml
+++ b/StormWeb/Views/Event/Details.cshtml
@@ -33,5 +33,5 @@
 </fieldset>
 <p>
     
-    @Html.ActionLink("Back to List", "Index")
+    @Html.Button_BackToList("Back to List", "../Index")
 </p>
