--- a/StormWeb/Views/Payment/Edit.cshtml
+++ b/StormWeb/Views/Payment/Edit.cshtml
@@ -63,6 +63,14 @@
             @Html.ValidationMessageFor(model => model.Date_Of_Payment)
         </div>
 
+      @*  <div class="editor-label">
+            @Html.LabelFor(model => model.Comment)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Comment)
+            @Html.ValidationMessageFor(model => model.Comment)
+        </div>*@
+
         <p>
             <input type="submit" value="Save" />
         </p>
