--- a/StormWeb/Views/Staff/Create.cshtml
+++ b/StormWeb/Views/Staff/Create.cshtml
@@ -178,8 +178,8 @@
         </tr>
     </table>
     <div class="pull-left">
-        <input type="submit" class="btn btn-primary" value="Save Changes"/>
-        <a href="Index" class="btn btn-danger">Cancel</a>
+        <input type="submit" class="btn btn-primary" value="Create"/>
+         @Html.Button_DeleteOrCancel("Cancel","Index")
     </div>
     <br />
     <br />
