--- a/StormWeb/Views/StaffCentre/Index.cshtml
+++ b/StormWeb/Views/StaffCentre/Index.cshtml
@@ -134,15 +134,16 @@ $(function () {
             <h5><i class="black-icons  documents"></i> Students Overview</h5> 
           </div>
           <div class="widget-content">
-            <div class="widget-box">
-                <table class="my-data-tbl-boxy table">
+            <div class="widget-box" style="padding: 15px;">
+                    <br />
+                    <table class="data-tbl-simple table table-bordered dataTable">
                         <thead>
                             <tr>
                                 <th>
-                                    <i class="black-icons user"></i>Student
+                                    <i class="color-icons user_co"></i>Student
                                 </th>
                                 <th>
-                                    <i class="black-icons folder"></i>Applications
+                                    <i class="color-icons folder_co"></i>Applications
                                 </th>
                                 <th>
                                     <i class="black-icons paperclip"></i>Documents
@@ -212,7 +213,5 @@ $(function () {
             </div>
           </div>
         </div>
-    </div>
-    
-                
+    </div>                
 </div>
