--- a/StormWeb/Views/StudentCentre/AddChildrensDetails.cshtml
+++ b/StormWeb/Views/StudentCentre/AddChildrensDetails.cshtml
@@ -37,7 +37,9 @@
                     DOB
                 </th>
                 <td>
+                 <div class="input-append">
                     @Html.TextBoxFor(model => model.DOB, new { @class = "chooseDate", @readonly = "readonly" })
+                 </div>
                 </td>
             </tr>
             <tr>
@@ -94,7 +96,10 @@
             changeMonth: true,
             changeYear: true,
             minDate: '-100Y',
-            maxDate: '0'
+            maxDate: '0',
+            showOn: "button",
+            buttonImage: "../../Content/img/calendar_btn.png",
+            buttonImageOnly: true
         });
     });
      
