--- a/StormWeb/Views/StudentCentre/List.cshtml
+++ b/StormWeb/Views/StudentCentre/List.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayFor(modelItem => item.Client.Title) 
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Login.Username) 
+            @Html.DisplayFor(modelItem => item.UserName) 
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Course_Choice)
