--- a/StormWeb/Views/StudentStaff/Index.cshtml
+++ b/StormWeb/Views/StudentStaff/Index.cshtml
@@ -55,7 +55,7 @@ $(function () {
                                     <i class="black-icons loading_bar"></i>Progress
                                 </th>
                                 <th>
-                                    
+                                    <i class="color-icons hammer_screwdriver_co"></i>Actions
                                 </th>                                
                             </tr>
                         </thead>
