--- a/StormWeb/Views/StudentStaff/NewStudent.cshtml
+++ b/StormWeb/Views/StudentStaff/NewStudent.cshtml
@@ -42,11 +42,11 @@ $(function () {
                 </div>
                 <div class="widget-content">
                     <div class="widget-box">
-                        <table class="my-data-tbl-boxy table">
+                        <table class="data-tbl-simple table table-bordered dataTable">
                         <thead>
                             <tr>
                                 <th>
-                                    <i class="black-icons user"></i>Student
+                                    <i class="color-icons user_co"></i>Student
                                 </th>
                                 <th>
                                     <i class="black-icons post_card"></i>Profile Summary
@@ -55,7 +55,7 @@ $(function () {
                                     <i class="black-icons folder"></i>Branch
                                 </th>
                                 <th>
-                                    
+                                    <i class="color-icons hammer_screwdriver_co"></i>Actions
                                 </th>                                
                             </tr>
                         </thead>
