--- a/StormWeb/Views/Application/Index.cshtml
+++ b/StormWeb/Views/Application/Index.cshtml
@@ -148,7 +148,7 @@ $(function () {
                                     @if (StormWeb.Helper.CookieHelper.isStaff())
                                     {
                                         <th>
-                                            Actions
+                                           <i class="color-icons hammer_screwdriver_co"></i>Actions
                                         </th>
                                     
                                     }
@@ -190,7 +190,7 @@ $(function () {
                                                 <li>
                                                     @{
                                             string[] a = (item.Status).Split('_');
-                                            string b = "", cls = "";
+                                            string b = "", cls = "", progress = "";
                                             if (a.Length == 2)
                                             {
                                                 b = a[0] + " " + a[1];
@@ -202,26 +202,50 @@ $(function () {
 
                                             int c = (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status));
                                             if (c == 0)
-                                            { cls = "label"; }
+                                            {
+                                                cls = "label";
+                                                progress = "- You do not have any counsellors assigned <br/>- All the Documents are pending <br />- Applications are not yet Submitted <br />- You do not have an Offer Letter <br />- Payments are not yet made<br />- You do not have a CoE";
+                                            }
                                             else if (c == 20)
-                                            { cls = "label label-inverse"; }
+                                            {
+                                                cls = "label label-inverse";
+                                                progress = "- You have been assigned to " + StormWeb.Controllers.ApplicationController.getStaffName(item.Application_Id) + "<br/>- All the Documents are pending <br />- Applications are not yet Submitted <br />- You do not have an Offer Letter <br />- Payments are not yet made<br />- You do not have a CoE";
+                                            }
                                             else if (c == 40)
-                                            { cls = "label label-important"; }
+                                            {
+                                                cls = "label label-important";
+                                                progress = "- You have been assigned to " + StormWeb.Controllers.ApplicationController.getStaffName(item.Application_Id) + "<br/>- All the Documents have been uploaded <br />- Applications are not yet Submitted <br />- You do not have an Offer Letter <br />- Payments are not yet made<br />- You do not have a CoE";
+                                            }
                                             else if (c == 60)
-                                            { cls = "label label-warning"; }
+                                            {
+                                                cls = "label label-warning";
+                                                progress = "- You have been assigned to " + StormWeb.Controllers.ApplicationController.getStaffName(item.Application_Id) + "<br/>- All the Documents have been uploaded <br />- All the Applications have been Submitted <br />- You do not have an Offer Letter <br />- Payments are not yet made<br />- You do not have a CoE";
+                                            }
                                             else if (c == 80)
-                                            { cls = "label label-info"; }
+                                            {
+                                                cls = "label label-info";
+                                                progress = "- You have been assigned to " + StormWeb.Controllers.ApplicationController.getStaffName(item.Application_Id) + "<br/>- All the Documents have been uploaded <br />- All the Applications have been Submitted <br />- Offer Letter is issued <br />- Payments are not yet made<br />- You do not have a CoE";
+                                            }
+                                            else if (c == 90)
+                                            {
+                                                cls = "label label-reverse";
+                                                progress = "- You have been assigned to " + StormWeb.Controllers.ApplicationController.getStaffName(item.Application_Id) + "<br/>- All the Documents have been uploaded <br />- All the Applications have been Submitted <br />- Offer Letter is issued <br />- Payment is made<br />- You do not have a CoE";
+                                            }
                                             else if (c == 100)
-                                            { cls = "label label-success"; }
+                                            {
+                                                cls = "label label-success";
+                                                progress = "- You have been assigned to " + StormWeb.Controllers.ApplicationController.getStaffName(item.Application_Id) + "<br/>- All the Documents have been uploaded <br />- All the Applications have been Submitted <br />- Offer Letter is issued <br />- Payment is made<br />- CoE is issued";
+                                            }
                                             
                                                     }
-                                                    <a id="progress(@item.Status)" data-original-title="Progress Status" data-content='<div id="progressbar(@item.Application_Id)" class="progress progress-striped active tip-top" title="@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%"><div class="bar" style="width: @(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%;">@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%</div></div>'>
-                                                        <span class="@cls">@b</span> </a>@*    <a class="active tip-top" title='Progress <br /><div id="progressbar" style="width:200px" class="progress progress-striped active tip-top" title="@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%">
+                                                    <a id="progress(@item.Status)" data-original-title="Progress Status" data-content='@progress'>
+                                                        <span class="@cls">@b</span> </a>@*<div id="progressbar(@item.Application_Id)" class="progress progress-striped active tip-top" title="@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%"><div class="bar" style="width: @(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%;">@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%</div></div>*@
+                                                    @*       <a class="active tip-top" title='Progress <br /><div id="progressbar" style="width:200px" class="progress progress-striped active tip-top" title="@(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%">
                                      <div class="bar" style="width: @(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%;">
                                      @(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status))%</div></div>'>@b </a> *@
                                                 </li>
                                             </ul>
-                                        </td>                                       
+                                        </td>
                                         @if (StormWeb.Helper.CookieHelper.isStaff())
                                         {
                                             <td>
@@ -246,24 +270,24 @@ $(function () {
                                                 </div>
                                             </td>
                                     
-                                                                                                          if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 40)
-                                                                                                          {
+                                                                                                                                  if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 40)
+                                                                                                                                  {
                                             <td>
                                                 <a href="@Url.Action("changeStatus", "Application", new { id = item.Application_Id })" class="btn btn-info">
                                                     Submit Application</a>
                                             </td>
-                                                                                                          }
-                                                                                                          else if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 100)
-                                                                                                          {
+                                                                                                                                  }
+                                                                                                                                  else if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) == 100)
+                                                                                                                                  {
                                             <td>
                                                 <a href="@Url.Action("markStatusCompleted", "Application", new { id = item.Application_Id })" class="btn btn-info">
                                                     Mark Status As Completed</a>
                                             </td>
-                                                                                                          }
+                                                                                                                                  }
 
-                                                                                                          else
-                                                                                                          { <td>
-                                                                                                          </td>}
+                                                                                                                                  else
+                                                                                                                                  { <td>
+                                                                                                                                  </td>}
                                         }
                                         @if (StormWeb.Helper.CookieHelper.isStudent())
                                         { 
@@ -272,17 +296,17 @@ $(function () {
                                                 {
                                                     if (item.Application_Cancel.Status == true)
                                                     {
-                                                        <a class="btn btn-danger tip-top disable" href="#" id="btnCancelApplicationsend(@item.Application_Id)"  disabled="disabled">
+                                                    <a class="btn btn-danger tip-top disable" href="#" id="btnCancelApplicationsend(@item.Application_Id)"  disabled="disabled">
                                                         Request send</a> 
                                                     }
                                                 }
                                                 else
-                                                { 
-                                                    if(StormWeb.Controllers.ApplicationController.getProgressValue(item.Status)<60)
+                                                {
+                                                    if (StormWeb.Controllers.ApplicationController.getProgressValue(item.Status) < 60)
                                                     {
                                                     <a class="btn btn-danger tip-top" data-toggle="modal" style="direction:inline;" href="#myModal2" id="btnCancelApplication(@item.Application_Id)" data-original-title="Cancel Application">
                                                         Cancel</a>
-                                                     <a class="btn btn-danger tip-top disable" href="#" id="btnCancelApplicationsend1(@item.Application_Id)"  disabled="disabled" style="display:none;">
+                                                    <a class="btn btn-danger tip-top disable" href="#" id="btnCancelApplicationsend1(@item.Application_Id)"  disabled="disabled" style="display:none;">
                                                         Request send</a> 
                                                     <div class="modal hide fade" id="myModal2">
                                                         <div class="modal-header">
@@ -300,28 +324,26 @@ $(function () {
                                                                 <textarea id="txtComments" name="txtComments" value=""></textarea>
                                                             </p>
                                                             <div id="spErrorMessage" class="error" style="display: none;">
-                                                                * Please Enter Your Comment</div>  
+                                                                * Please Enter Your Comment</div>
                                                         </div>
                                                         <div class="modal-footer">
                                                             <a href="#" class="btn" data-dismiss="modal" id="dismissModal1">No</a> <a class="btn btn-modal"
-                                                                id="saveComment" type="submit" value="Yes" onclick="checkComment('@item.Application_Id');">Yes</a>
+                                                                id="saveComment" type="submit" value="Yes" onclick="checkComment('@item.Application_Id');">
+                                                                Yes</a>
                                                         </div>
                                                     </div>
                                                     }
 
-                                                }   
+                                                }
                                             </td>
                                             <script type="text/javascript">
-                                                function checkComment(val) 
-                                                { 
+                                                function checkComment(val) {
                                                     var isValid = true;
-                                                    if (document.getElementById("txtComments").value == "") 
-                                                    {
+                                                    if (document.getElementById("txtComments").value == "") {
                                                         document.getElementById("spErrorMessage").style.display = 'inline';
                                                         isValid = false;
                                                     }
-                                                    if (isValid == true) 
-                                                    {
+                                                    if (isValid == true) {
                                                         var myvar = document.getElementById("txtComments").value.toString();
 
                                                         $.ajax({
@@ -330,17 +352,15 @@ $(function () {
                                                             cache: false,
                                                             type: 'GET',
                                                             data: { comment: $("#txtComments").val(), id: val },
-                                                            success: function (result) 
-                                                            {
-                                                                if (result.Success) 
-                                                                {
+                                                            success: function (result) {
+                                                                if (result.Success) {
                                                                     $('#myModal2').hide();
-                                                                    $('.modal-backdrop').hide(); 
+                                                                    $('.modal-backdrop').hide();
                                                                     document.getElementById("btnCancelApplication(" + val + ")").style.display = 'none';
-                                                                    document.getElementById("btnCancelApplicationsend1(" + val + ")").style.display = 'inline'; 
+                                                                    document.getElementById("btnCancelApplicationsend1(" + val + ")").style.display = 'inline';
                                                                 }
                                                             }
-                                                        });  
+                                                        });
                                                     }
                                                 }   
                                             </script> 
@@ -376,7 +396,9 @@ $(function () {
     </div>
 </div>
 <div class="row-fluid">
-    <div class="span12" style="text-align:center"><a href="@Url.Action("Index","Document")" class="btn btn-primary">Manage Application Documents &raquo;</a></div>
+    <div class="span12" style="text-align: center">
+        <a href="@Url.Action("Index", "Document")" class="btn btn-primary">Manage Application
+            Documents &raquo;</a></div>
 </div>
 <script type="text/javascript">
     $(function () {
