--- a/StormWeb/Views/Branch/Delete.cshtml
+++ b/StormWeb/Views/Branch/Delete.cshtml
@@ -1,43 +1,101 @@
 ﻿@model StormWeb.Models.Branch
-
 @{
     ViewBag.Title = "Delete";
 }
+<h2>
+    Delete</h2>
+<h3>
+    Are you sure you want to delete this?</h3>
+<br />
+@Html.ValidationSummary(false, "", new { @class = "error" })
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Branch</legend>
-
-    <div class="display-label">Branch_Name</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Branch_Name)
+<div class="row-fluid">
+    <div class="span12">
+        <div class="widget-block">
+            <div class="widget-head">
+                <h2>
+                    Client Details</h2>
+            </div>
+            <div class="widget-content">
+                <div class="widget-box">
+                    <br />
+                    <table class="table">
+    <tr>
+        <th>
+            Branch_Name
+        </th>
+        <td>@Html.DisplayFor(model => model.Branch_Name)
+        </td>
+    </tr>
+    <tr>
+        <th>
+            Address
+        </th>
+        <td>
+            @Html.DisplayFor(model => model.Address.Address_Name)
+        </td>
+    </tr>
+    <tr>
+        <th>
+            Primary_Contact
+        </th>
+        <td>
+            @Html.DisplayFor(model => model.Primary_Contact)
+        </td>
+    </tr>
+    <tr>
+        <th>
+            Secondary_Contact
+        </th>
+        <td>
+            @Html.DisplayFor(model => model.Secondary_Contact)
+        </td>
+    </tr>
+    <tr>
+        <th>
+            Email
+        </th>
+        <td>
+            @Html.DisplayFor(model => model.Email)
+        </td>
+    </tr>
+</table>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="display-label">Address</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Address.Address_Name)
-    </div>
-
-    <div class="display-label">Primary_Contact</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Primary_Contact)
-    </div>
-
-    <div class="display-label">Secondary_Contact</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Secondary_Contact)
-    </div>
-
-    <div class="display-label">Email</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
+</div>
+<br />
+@*@using (Html.BeginForm())
+{
     <p>
-        <input type="submit" value="Delete" /> |
+        <input type="submit" value="Delete" class="btn btn-danger"/>
+        |
         @Html.ActionLink("Back to List", "Index")
     </p>
+}*@
+<p>
+    <input type="submit" value="Delete" class="btn btn-danger  tip-top" data-toggle="modal"
+        href="#myModal1" data-original-title="Delete Branch Details" />
+      @Html.Button_DeleteOrCancel("Bact To List", "../Index")
+</p>
+@using (Html.BeginForm("Delete", "Branch", FormMethod.Post))
+{   
+    <div class="modal hide fade" id="myModal1">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">
+                ×</button>
+            <h3>
+                Delete Branch Details</h3>
+        </div>
+        <div class="modal-body">
+            <p>
+                Are you sure you want to delete this Branch ?
+            </p>
+        </div>
+        <div class="modal-footer">
+            <a href="#" class="btn" data-dismiss="modal" id="dismissModal">No</a>
+            <input type="submit" class="btn btn-modal" id="save" type="submit" value="Yes" />
+        </div>
+    </div>
 }
