--- a/StormWeb/Views/Branch/Details.cshtml
+++ b/StormWeb/Views/Branch/Details.cshtml
@@ -1,40 +1,76 @@
 ﻿@model StormWeb.Models.Branch
-
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-
-<fieldset>
-    <legend>Branch</legend>
-
-    <div class="display-label">Branch_Name</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Branch_Name)
+<div class="row-fluid">
+    <div class="span12">
+        <div class="widget-block">
+            <div class="widget-head">
+                <h2>
+                    Branch Details</h2>
+            </div>
+            <div class="widget-content">
+                <div class="widget-box">
+                    <br />
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Branch Name
+                            </th>
+                            <td>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(model => model.Branch_Name)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Address
+                            </th>
+                            <td>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(model => model.Address.Address_Name)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Primary Contact
+                            </th>
+                            <td>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(model => model.Primary_Contact)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Secondary Contact
+                            </th>
+                            <td>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(model => model.Secondary_Contact)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Email
+                            </th>
+                            <td>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(model => model.Email)
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="display-label">Address</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Address.Address_Name)
-    </div>
-
-    <div class="display-label">Primary_Contact</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Primary_Contact)
-    </div>
-
-    <div class="display-label">Secondary_Contact</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Secondary_Contact)
-    </div>
-
-    <div class="display-label">Email</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-</fieldset>
+</div> 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Branch_Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    <a href="@Url.Action("Edit", "Branch", new { id = Model.Branch_Id })" class="btn btn-info">
+        Edit</a>
+    @Html.Button_BackToList("Bact To List", "../Index")
 </p>
