--- a/StormWeb/Views/Client/Details.cshtml
+++ b/StormWeb/Views/Client/Details.cshtml
@@ -1,96 +1,153 @@
 ﻿@model StormWeb.Models.Client
-
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
-<div class="default-display">
-<fieldset>
-    <legend>Client</legend>
-
-    <div class="display-label">Title</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Title)
+<div class="row-fluid">
+    <div class="span12">
+        <div class="widget-block">
+            <div class="widget-head">
+                <h2>
+                    Client Details</h2>
+            </div>
+            <div class="widget-content">
+                <div class="widget-box">
+                    <br />
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Title
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Title)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Dob
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Dob)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                GivenName
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.GivenName)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                LastName
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.LastName)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Email
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Email)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Contact Number
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.ContactNumber)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Secondary Contact Number
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.SecondaryContactNumber)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Address
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Address.Address_Name)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Services
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Services)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Preferred Country
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.PreferredCountry)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                InPreferred Country
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.InPreferredCountry)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Preferred Country Visa Status
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.PreferredCountryVisaStatus)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Marital Status
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.MaritalStatus)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Related Kin Details
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.RelatedKinDetail)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Nationality
+                            </th>
+                            <td>@Html.DisplayFor(model => model.Nationality)
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                Registered On
+                            </th>
+                            <td>
+                                @Html.DisplayFor(model => model.Registered_On)
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="display-label">Dob</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Dob)
-    </div>
-
-    <div class="display-label">GivenName</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.GivenName)
-    </div>
-
-    <div class="display-label">LastName</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.LastName)
-    </div>
-
-    <div class="display-label">Email</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Email)
-    </div>
-
-    <div class="display-label">ContactNumber</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.ContactNumber)
-    </div>
-
-    <div class="display-label">SecondaryContactNumber</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.SecondaryContactNumber)
-    </div>
-
-    <div class="display-label">Address</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Address.Address_Name)
-    </div>
-
-    <div class="display-label">Services</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Services)
-    </div>
-
-    <div class="display-label">PreferredCountry</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.PreferredCountry)
-    </div>
-
-    <div class="display-label">InPreferredCountry</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.InPreferredCountry)
-    </div>
-
-    <div class="display-label">PreferredCountryVisaStatus</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.PreferredCountryVisaStatus)
-    </div>
-
-    <div class="display-label">MaritalStatus</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.MaritalStatus)
-    </div>
-
-    <div class="display-label">RelatedKinDetail</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.RelatedKinDetail)
-    </div>
-
-    <div class="display-label">Nationality</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Nationality)
-    </div>
-
-    <div class="display-label">Registered_On</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Registered_On)
-    </div>
-</fieldset>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Client_Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
 </div>
+<p>
+    <a href="@Url.Action("Edit", "Client", new { id = Model.Client_Id })" class="btn btn-info">
+        Edit</a>
+    @Html.Button_BackToList("Bact To List", "../Index")
+</p> 
