--- a/StormWeb/Views/Course/Details.cshtml
+++ b/StormWeb/Views/Course/Details.cshtml
@@ -1,149 +1,89 @@
 ﻿@model StormWeb.Models.Course
-
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_LayoutEmpty.cshtml";
 }
-
-@*<h2>Details</h2>*@
-
-@*<div class="row-fluid">
-    <div class="page-header">
-       <h1>
-           Course Details</h1>
-    </div>
-</div>*@
-
-<div class = "row-fluid">
-<div class="span12">
+ 
+<div class="row-fluid">
+    <div class="span12">
         <div class="widget-block">
             <div class="widget-head">
                 <h3>
                     Course Details</h3>
-                     <div class="widget-control pull-right">
-                    <a href="#" data-toggle="dropdown" class="btn dropdown-toggle"><i class="icon-cog"></i>
-                        <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="icon-plus"></i>Add New</a></li>
-                        <li><a href="#"><i class="icon-ok"></i>Bulk Approved</a></li>
-                        <li><a href="#"><i class="icon-minus-sign"></i>Bulk Remove</a></li>
-                    </ul>
-                </div>
             </div>
- <div class="widget-content">
+            <div class="widget-content">
                 <div class="widget-box">
                     <table class="data-tbl-boxy table">
-                                    <tr>
-                                        <td><label class="control-label-bold" for="input01">University Name</label></td>
-									    <td>@Html.DisplayFor(model => model.Faculty.University.University_Name, new { Class="input-xlarge"})</td>                                          
-                                    </tr> 
-                                   <tr>
-                                        <td><label class="control-label-bold" for="input01">Course Level</label></td>
-									    <td>@Html.DisplayFor(model => model.Course_Level.Course_Level1, new { Class="input-xlarge"})</td>                                          
-                                    </tr>                                   										
-                                       <tr>
-                                       <td><label class="control-label-bold" for="input01">Semester Commencement Date</label></td> 
-										@*<td> @Html.DisplayFor(model => model.Commence_Date_Sem, new { Class = "input-xlarge" })</td>*@
-                                        <td>@Html.Encode(Model.Commence_Date_Sem.Value.ToString("dd/MM/yyyy"))</td>							
-										</tr>
-                                        <tr>
-                                       <td> <label class="control-label-bold" for="input01">Course Name</label></td>
-										<td>@Html.DisplayFor(model => model.Course_Name, new { Class="input-xlarge"})</td>																				 
-										</tr>
-                                       <tr>
-                                       <td> <label class="control-label-bold" for="input01">Duration</label></td>																			
-										<td>@Html.DisplayFor(model => model.Duration, new { Class = "input-xlarge" })</td>
-										</tr>
-                                         <tr>
-                                        <td><label class="control-label-bold" for="input01">Fee</label></td>
-										<td>@Html.DisplayFor(model => model.Fee, new { Class="input-xlarge"})</td>																					 
-										</tr>
-                                         <tr>
-                                       <td><label class="control-label-bold" for="input01">Url</label></td> 
-										 <td><a href="@Model.Faculty.University.University_Url">@Html.DisplayFor(model => model.Faculty.University.University_Url, new { Class = "input-xlarge" })</a></td>						
-										</tr> 
-                                        <tr>
-                                       <td><label class="control-label-bold" for="input01">Description</label></td> 
-										<td> @Html.DisplayFor(model => model.Description, new { Class="input-xlarge"})</td>																					
-										</tr> 
-                                        
-                                      </table> 
-                                     </div>
-                           </div>
-	</div></div> </div>
-
-@*<div class = "row-fluid">
-<div class="span12">
-        <div class="widget-block">
-            <div class="widget-head">
-                <h3>
-                    Course Details</h3>
-                     <div class="widget-control pull-right">
-                    <a href="#" data-toggle="dropdown" class="btn dropdown-toggle"><i class="icon-cog"></i>
-                        <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="icon-plus"></i>Add New</a></li>
-                        <li><a href="#"><i class="icon-ok"></i>Bulk Approved</a></li>
-                        <li><a href="#"><i class="icon-minus-sign"></i>Bulk Remove</a></li>
-                    </ul>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    University Name</label>
+                            </td>
+                            <td>@Html.DisplayFor(model => model.Faculty.University.University_Name, new { Class = "input-xlarge" })
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Course Level</label>
+                            </td>
+                            <td>@Html.DisplayFor(model => model.Course_Level.Course_Level1, new { Class = "input-xlarge" })
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Semester Commencement Date</label>
+                            </td>
+                            @*<td> @Html.DisplayFor(model => model.Commence_Date_Sem, new { Class = "input-xlarge" })</td>*@
+                            <td>@Html.Encode(Model.Commence_Date_Sem.Value.ToString("dd/MM/yyyy"))
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Course Name</label>
+                            </td>
+                            <td>@Html.DisplayFor(model => model.Course_Name, new { Class = "input-xlarge" })
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Duration</label>
+                            </td>
+                            <td>@Html.DisplayFor(model => model.Duration, new { Class = "input-xlarge" })
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Fee</label>
+                            </td>
+                            <td>@Html.DisplayFor(model => model.Fee, new { Class = "input-xlarge" })
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Url</label>
+                            </td>
+                            <td>
+                                <a href="@Model.Faculty.University.University_Url">@Html.DisplayFor(model => model.Faculty.University.University_Url, new { Class = "input-xlarge" })</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label class="control-label-bold" for="input01">
+                                    Description</label>
+                            </td>
+                            <td>
+                                @Html.DisplayFor(model => model.Description, new { Class = "input-xlarge" })
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
- <div class="widget-content">
-                <div class="widget-box">
-                    <table class="data-tbl-boxy table">
-
-<fieldset>
-    <legend>Course</legend>
-    <tr>
-    <td>
-    <div class="display-label">Course Level</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Course_Level.Course_Level1)
+        </div>
     </div>
-    </td>
-    <td>
-    <div class="display-label">Faculty</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Faculty.Faculty_Name)
-    </div>
-    </td>
-    <td>
-    <div class="display-label">Semester Commencement Date</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Commence_Date_Sem)
-    </div>
-    </td>
-    <td>
-    <div class="display-label">Course Name</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Course_Name)
-    </div>
-    </td>
-    <td>
-    <div class="display-label">Duration</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Duration)
-    </div>
-    </td>
-    <td>
-    <div class="display-label">Description</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Description)
-    </div>
-    </td>
-    <td>
-    <div class="display-label">Fee</div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Fee)
-    </div>
-    </td>
-    </tr>
-</fieldset>
-</table>
 </div>
-</div>
-</div>*@
-@*<p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.Course_Id }) |
-    @Html.ActionLink("Back to List", "List")
-</p>*@
