--- a/StormWeb/Views/Course/List.cshtml
+++ b/StormWeb/Views/Course/List.cshtml
@@ -4,26 +4,19 @@
     ViewBag.Title = "List";
 }
 
-<h2> Courses <a class="btn btn-warning btn-mini" href="@Url.Action("Index", "University")"><< Back to University</a></h2>
+<h2> Courses</h2>
 <div class="row-fluid">
     <div class="span12">
         <div class="widget-block">
             <div class="widget-head">
                 <h5>
                     Course list</h5>
-                <div class="widget-control pull-right">
-                    <a href="#" data-toggle="dropdown" class="btn dropdown-toggle"><i class="icon-cog"></i>
-                        <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="icon-plus"></i>Add New</a></li>
-                        <li><a href="#"><i class="icon-ok"></i>Bulk Approved</a></li>
-                        <li><a href="#"><i class="icon-minus-sign"></i>Bulk Remove</a></li>
-                    </ul>
-                </div>
+                
             </div>
             <div class="widget-content">
-                <div class="widget-box">
-                    <table class="data-tbl-boxy table">
+               <div class="widget-box" style="padding: 15px;">
+                    <br />
+                      <table class="data-tbl-simple table table-bordered dataTable">
                        <thead>
                        <tr>
                         <th>
@@ -48,7 +41,7 @@
                             Description
                         </th>
                         <th>
-                            Action
+                            <i class="color-icons bullet_key_co"></i>Actions
                         </th>
                     </tr>
 			        </thead>
@@ -105,15 +98,10 @@
 	</div>
    </div> 
    </div>
-   </div>        
-
-    <div class="row-fluid">
-    <div class="span12" style="text-align: center">
+   </div>         
         <p>
-            @Html.ActionLink("Create New", "Create", new {  }, new { @class = "btn btn-primary" })
-        </p>
-    </div>
-</div>
-        
+            @Html.Button_Add("Create New", "Create")
+            @Html.Button_BackToList("Back to Universities", "../../University/Index") 
+        </p> 
 
 
