--- a/StormWeb/Views/Payment/Create.cshtml
+++ b/StormWeb/Views/Payment/Create.cshtml
@@ -65,7 +65,13 @@
             @Html.ValidationMessageFor(model => model.Date_Of_Payment)
         </div>
 
-
+       @* <div class="editor-label">
+            @Html.LabelFor(model => model.Comment)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Comment)
+            @Html.ValidationMessageFor(model => model.Comment)
+        </div>*@
 
         <p>
             <input type="submit" value="Create" />
