--- a/StormWeb/Views/Shared/_LoadHeaderWithScript.cshtml
+++ b/StormWeb/Views/Shared/_LoadHeaderWithScript.cshtml
@@ -41,38 +41,29 @@
     <script src="@Url.Content("~/Scripts/jquery.ui.touch-punch.js")"></script>
     <script src="@Url.Content("~/Scripts/bootstrap.js")"></script>
     <script src="@Url.Content("~/Scripts/prettify.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.sparkline.min.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.nicescroll.min.js")"></script>
     <script src="@Url.Content("~/Scripts/accordion.jquery.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.smartWizard-2.0.js")"></script>
     <script src="@Url.Content("~/Scripts/vaidation.jquery.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery-dynamic-form.js")"></script>
     <script src="@Url.Content("~/Scripts/fullcalendar.js")"></script>
     <script src="@Url.Content("~/Scripts/raty.jquery.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.noty.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.cleditor.min.js")"></script>
     <script src="@Url.Content("~/Scripts/data-table.jquery.js")"></script>
     <script src="@Url.Content("~/Scripts/TableTools.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/ColVis.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/plupload.full.js")"></script>
     <script src="@Url.Content("~/Scripts/elfinder/elfinder.min.js")"></script>
     <script src="@Url.Content("~/Scripts/chosen.jquery.js")"></script>
     <script src="@Url.Content("~/Scripts/uniform.jquery.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.tagsinput.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.colorbox-min.js")"></script>
     <script src="@Url.Content("~/Scripts/check-all.jquery.js")"></script>
     <script src="@Url.Content("~/Scripts/inputmask.jquery.js")"></script>
-    <script src="http://bp.yahooapis.com/2.4.21/browserplus-min.js"></script>
-    <script src="@Url.Content("~/Scripts/plupupload/jquery.plupload.queue/jquery.plupload.queue.js")"></script>
-    <script src="@Url.Content("~/Scripts/excanvas.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/jquery.jqplot.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/chart/jqplot.highlighter.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/chart/jqplot.cursor.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/chart/jqplot.dateAxisRenderer.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/custom-script.js")"></script>
+    <script src="http://bp.yahooapis.com/2.4.21/browserplus-min.js"></script>    
     <script src="@Url.Content("~/Scripts/jquery.pnotify.js")" type="text/javascript"></script>    
     <script src="@Url.Content("~/Scripts/jquery.easing.1.3.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.bouncebox.1.0.js")"></script>
+    <script src="@Url.Content("~/Scripts/jconfirmaction.jquery.js")"></script>
+    <script src="@Url.Content("~/Scripts/jquery.cleditor.min.js")"></script>
+    <script src="@Url.Content("~/Scripts/custom-script.js")"></script>
+    
 <!-- html5.js for IE less than 9 --> 
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
