--- a/StormWeb/Views/University/Edit.cshtml
+++ b/StormWeb/Views/University/Edit.cshtml
@@ -1,65 +1,63 @@
 ﻿@model StormWeb.Models.University
-
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
-
+<h2>
+    Edit</h2>
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-    <fieldset>
-        <legend>University</legend>
-
-        @Html.HiddenFor(model => model.University_Id)
-
-        <div class="editor-label">
-            @Html.Label("Country")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Country_Id", "-- Select One --")
-            @Html.ValidationMessageFor(model => model.Country_Id)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.University_Name,"University Name")
-        </div>
-        <div class="editor-field">
-            @Html.TextBoxFor(model => model.University_Name)
-            @Html.ValidationMessageFor(model => model.University_Name)
-            @* @Html.ValidationMessage("UniversityError")     *@
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Campus)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Campus)
-            @Html.ValidationMessageFor(model => model.Campus)
-          @*  @Html.ValidationMessage("CampusError") *@    
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-             @*@Html.ValidationMessage("EmailError")    *@ 
-        </div>
-
-        <p>                 
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
+    @Html.HiddenFor(model => model.University_Id)
+    <table style="text-align: left;">
+        <tr>
+            <th>
+                Country
+            </th>
+            <td>
+                @Html.DropDownList("Country_Id", "-- Select One --")
+                @Html.ValidationMessageFor(model => model.Country_Id)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                University Name
+            </th>
+            <td>
+                @Html.TextBoxFor(model => model.University_Name)
+                @Html.ValidationMessageFor(model => model.University_Name)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                Campus
+            </th>
+            <td>
+                @Html.EditorFor(model => model.Campus)
+                @Html.ValidationMessageFor(model => model.Campus)
+            </td>
+        </tr>
+        <tr>
+            <th>
+                Email
+            </th>
+            <td>
+                @Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email)
+            </td>
+        </tr>
+        <tr>
+            <th>
+            </th>
+            <td>
+            </td>
+        </tr>
+    </table>
+    
+    
+    <p>
+        <input type="submit" value="Save" class="btn btn-primary" /> 
+       @Html.Button_DeleteOrCancel("Cancel","../Index")
+    </p> 
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
