--- a/StormWeb/Views/University/Faculties.cshtml
+++ b/StormWeb/Views/University/Faculties.cshtml
@@ -44,26 +44,17 @@ $(function () {
        });
 </script>
 <h2>
-    Faculties <a class="btn btn-warning btn-mini" href="@Url.Action("Index")"><< Back to University</a></h2> 
+    Faculties</h2>
 <div class="row-fluid">
     <div class="span12">
         <div class="widget-block">
             <div class="widget-head">
                 <h5>
-                    University List</h5>
-                <div class="widget-control pull-right">
-                    <a href="#" data-toggle="dropdown" class="btn dropdown-toggle"><i class="icon-cog"></i>
-                        <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="icon-plus"></i>Add New</a></li>
-                        <li><a href="#"><i class="icon-ok"></i>Bulk Approved</a></li>
-                        <li><a href="#"><i class="icon-minus-sign"></i>Bulk Remove</a></li>
-                    </ul>
-                </div>
+                    Faculties List</h5>
             </div>
             <div class="widget-content">
-                <div class="widget-box">
-                    <table class="mydata-tbl-inbox table table-bordered">
+                <div class="widget-box" style="padding: 15px;">
+                    <table class="data-tbl-simple table table-bordered dataTable">
                         <thead>
                             <tr>
                                 <th>
@@ -99,7 +90,7 @@ $(function () {
                                     </td>
                                     <td>
                                         <div class="selectArea">
-                                            <a href="@Url.Action("EditFaculty", new { id = item.Faculty_Id })" type="button" class="btn btn-mini btn-info" value="@item.Faculty_Id" name="EditFaculty">
+                                            <a href="@Url.Action("EditFaculty", new { id = item.Faculty_Id })" type="button" class="btn btn-info" value="@item.Faculty_Id" name="EditFaculty">
                                                 Edit</a>
                                             @if (item.Courses.Count() == 0)
                                             {            
@@ -126,10 +117,7 @@ $(function () {
         </div>
     </div>
 </div>
-<div class="row-fluid">
-    <div class="span12" style="text-align: center">
-        <p>
-            @Html.ActionLink("Create New", "CreateFaculty", new { id = ViewBag.UniversityId }, new { @class = "btn btn-primary" })
-        </p>
-    </div>
-</div>
+<p>
+    @Html.ActionLink("Create New", "CreateFaculty", new { id = ViewBag.UniversityId }, new { @class = "btn btn-info" })
+    @Html.Button_BackToList("Back to Universities", "../../University/Index")
+</p>
